--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,22 +1,3 @@
-.name{
-    font-size: 100px;
-    font-family: var(--fun-font);
-    border: 2px solid gray;
-    padding: 20px;
-    box-shadow: 3px 3px 0px black;
-}
-
-.nameContainer{
-    height: 70vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    font-size: 30px;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-}
- 
 .window {
     width: 75vh;
     height: 50vh;
@@ -96,12 +77,26 @@
 @media screen and (max-width: 1000px) {
     .window {
         width: 80%;
-        height: 65vh;
+        height: 57vh;
     }
     .avatar img{
         height: 85px;
         width: 85px;
         margin-top: 8vh;
+    }
+    .titlebartext{
+        font-size: 20px;
+    }
+
+    .windowbody h2 {
+        font-size: 30px;
+    }
+    .windowbody p{
+        font-size: 20px;
+    }
+
+    .windowbody li {
+        font-size: 20px;
     }
 }
 
